--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2018"
 [dependencies]
 tide = "0.16"
 async-std = { version = "1.8", features = ["attributes"] }
+
+thiserror = "1.0"
+log = "0.4"
+async-trait = "0.1"
+futures = "0.3"
+
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 hmac = "0.12"
 hex = "0.4"
-thiserror = "1.0"
-log = "0.4"
-async-trait = "0.1"
