--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "tide-github"
+description = "Process Github webhooks in [tide](https://github.com/http-rs/tide)"
+edition = "2018"
 version = "0.1.0"
 authors = ["Koen Wilde <koen@parity.io>"]
-edition = "2018"
+repository = "https://github.com/paritytech/tide_github"
 license = "Apache-2.0"
+categories = ["web-programming", "api-bindings"]
+keywords = ["tide", "github", "webhooks"]
 
 [dependencies]
 tide = "0.16"
