Pass parsed payload to event handler
Since the event handler now no longer needs to interact with
[`tide::Request`] the event handler does not need to be `async` anymore.
And since accepting non-`async` `Fn`'s' simplifies the API for the user
(e.g. by not requiring `Box::pin`), they're not `async` anymore. Those
who do want to execute stuff asynchronously can still do so.

Perhaps we can accept both `async` and non-`async` `Fn`'s in the
*future*.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tide-github"
 description = "Easily process Github webhooks using tide"
 edition = "2018"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Koen Wilde <koen@parity.io>"]
 repository = "https://github.com/paritytech/tide_github"
 license = "Apache-2.0"
@@ -22,3 +22,5 @@ serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 hmac = "0.12"
 hex = "0.4"
+
+octocrab = "0.15"
